# digduck

./: CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/workflows/: deploy.yml
apps/api/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  eslint.config.js  eslint.config.mjs  package.json  tsconfig.json  vitest.config.ts
apps/api/prisma/: schema.prisma  seed.dev.ts  seed.ts
apps/api/src/: app.ts  server.ts
apps/api/src/automation/: record-login-flow.ts  test-crawler.ts
apps/api/src/config/: database.ts  env.ts
apps/api/src/controllers/: admin.controller.ts  auth.controller.ts  crawl-history.controller.ts  license-notification.controller.ts  license.controller.ts  mail-test.controller.ts  mail.controller.ts  naver.controller.ts  smart-store.controller.ts  user.controller.ts
apps/api/tests/: basic-api.test.ts  setup.ts  simple.test.ts
apps/dig-duck/: .gitignore  README.md  eslint.config.js  index.html  package-installs.md  package.json  vite-config-fix.md  vite.config.ts
apps/dig-duck/src/: main.tsx  routeTree.gen.ts  vite-env.d.ts
apps/dig-duck/src-tauri/: Cargo.toml  tauri.conf.json
apps/dig-duck/src-tauri/icons/: icon.icns
apps/digduck/src/: vite-env.d.ts
apps/mcp-hub/: package.json  tsconfig.json
apps/mcp-hub/src/: index.ts  sse.ts
apps/naver-crawler/: .gitignore  index.html  package.json  tailwind.config.ts  vite.config.ts
apps/naver-crawler/src/: App.tsx  index.css  main.tsx  routeTree.gen.ts
apps/naver-crawler/src-tauri/: Cargo.toml  main.rs  tauri.conf.json
(+223 files in other folders)
