[package]
name = "dig-duck"
version = "0.0.0"
description = "Dig Duck"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[[bin]]
name = "dig-duck"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.8", features = ["custom-protocol"] }
tauri-plugin-shell = "2.3"  # shell 기능을 별도 플러그인으로
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
